Change bulk path to /bulk-import/facts to leave room for other bulk importers in the future
