# packages/back-end/src/api/bulk-import/bulk-import.router.ts
@@ -1,10 +1,10 @@
 import { Router } from "express";
-import { postBulkImport } from "./postBulkImport";
+import { postBulkImportFacts } from "./postBulkImportFacts";
 
 const router = Router();
 
 // Dimension Endpoints
 // Mounted at /api/v1/bulk-import
-router.post("/", postBulkImport);
+router.post("/facts", postBulkImportFacts);
 
 export default router;
