# packages/back-end/src/api/openapi/openapi.yaml
@@ -220,9 +220,9 @@ paths:
       $ref: "./paths/updateFactMetric.yaml"
     delete:
       $ref: "./paths/deleteFactMetric.yaml"
-  /bulk-import:
+  /bulk-import/facts:
     post:
-      $ref: "./paths/postBulkImport.yaml"
+      $ref: "./paths/postBulkImportFacts.yaml"
   # PLOP_INSERT_PATHS_HERE
 components:
   parameters:
